--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ main {
     max-width: 1440px;
     background-color: var(--almond);
     box-shadow: 0 0 20px rgba(0,0,0,0.7);
+    border-radius: 20px;
 }
 
 header {
